test/bad/classes/method07.px

class Test def

    func f() def
        skip

    func f() def
        skip

f()
